--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@next/font": "^14.2.15",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.7",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "next": "15.3.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
