--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@fontsource/teko": "^5.2.6",
     "@next/font": "^14.2.15",
     "aos": "^2.3.4",
-    "bootstrap": "^5.3.7",
+    "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-awesome-reveal": "^4.3.1",
+    "react-bootstrap": "^2.10.10",
+    "react-compare-image": "^3.5.10",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
