feat: Update import paths to use absolute imports and remove unused footer component

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",       // Base for absolute imports
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]   // Alias: import something from "@/app/..." maps to "src/app/..."
     }
   }
 }
