--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bootstrap": "^5.3.8",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
-    "next": "15.3.5",
+    "next": "^16.0.7",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
     "react-bootstrap": "^2.10.10",
